# pyresume

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  makefile  pyproject.toml  pytest.ini  requirements.txt  taskfile.yaml
.github/workflows/: release-please.yaml
markdown2pdf/: __main__.py  settings.py
markdown2pdf/assets/: resume.md
pyresume/: __main__.py  cli.py  css_styles.py  default_resume.py  file_actions.py  file_operations.py  markdown_to_pdf.py  pdf_generator.py  settings.py  version.py
pyresume/assets/: example-resume.md
pyresume/tests/: default_resume_test.py  file_actions_test.py  file_operations_test.py  markdown_to_pdf_test.py  pdf_generator_test.py  settings_test.py  styles_test.py  version_test.py
tests/: test_app.py  test_default_resume.py  test_file_actions.py  test_markdown_to_pdf.py  test_settings.py  test_styles.py  test_version.py
