[tool.poetry]
name = "pyresume"
version = "2.0.1"
description = "My python approach to building my resume from markdown"
authors = ["Simao Ferreira <simao.ferreira@tuta.io>"]
license = "MIT"
readme = "README.md"
keywords = ["curriculum", "resume"]

[tool.poetry.dependencies]
python = "^3.11"
md2pdf = "^1.0.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
