[tool.poetry]
name = "pyresume"
version = "v3.0.2"
description = "My python approach to building my resume from markdown"
authors = ["Itzalak <itzalak@tuta.io>"]
license = "MIT"
readme = "README.md"
keywords = ["curriculum", "resume"]

[tool.poetry.dependencies]
python = "^3.11"
md2pdf = "^1.0.1"
pytest = "^7.4.2"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"

[tool.pyright]
include=["pyresume"]
venvPath = "."
venv = ".venv"
executionEnvironments=[
  {"root" = "pyresume"}
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_customize"
tag_format = "v$major.$minor.$patch"
version_scheme = "semver"
version = "3.0.2"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml",
]

[tool.commitizen.customize]
schema = "<type>: <body>"
schema_pattern = "(bump|break|feat|chore|tools|docs|fix):(\\s.*)"
bump_pattern = "^(bump|break|feat|tools|fix)"
bump_map = { "break" = "MAJOR", "feat" = "MINOR", "tools" = "PATCH", "fix" = "PATCH", "docs" = "PATCH" }
change_type_order = ["break", "feat", "fix", "chore", "tools", "docs"]
commit_parser = "^(?P<change_type>break|feat|chore|tools|docs|fix):\\s(?P<message>.*)?"
changelog_pattern = "^(break|feat|chore|tools|docs|fix)?(!)?"
change_type_map = { "break" = "Breaking Change", "feat" = "Changed", "fix" = "Fixed", "chore" = "Changed", "tools" = "Tools", "docs" = "Notes" }
